# rag_crawl

./: .cursorrules  .dockerignore  .gitignore  DEVELOPMENT.md  GETTING_STARTED.md  MIGRATION_TO_NEXTJS.md  QUICK_START.md  README.md  alembic.ini  create_qdrant_collection.py  docker-compose.yml  env.example  get-azure-credentials.sh  pyproject.toml  setup-env.sh  start-dev.sh  start.sh  test_azure_config.py  test_direct_qdrant.py  test_llama_qdrant.py  test_qdrant_direct.py  test_qdrant_fixed.py  test_qdrant_fixes.py
.cursor/rules/: tech-stack.mdc
.github/workflows/: deploy-azure.yml  terraform-deploy.yml
alembic/: env.py
alembic/versions/: .gitkeep  20250623_1322_a8a126bd0975_initial_database_schema.py  20250704_0202_ed5813e7dda5_add_crawl_fields_to_documents.py
azure/: containerapp.json  deploy.sh
deployment/: README.md  docker-compose.production.yml  nginx.conf
deployment/dockerfiles/: backend.Dockerfile  frontend.Dockerfile  nginx.Dockerfile
deployment/init-scripts/: init-db.sql
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/documents/: page.tsx
frontend/src/hooks/: use-chat.ts  use-crawl.ts  use-documents.ts
frontend/src/lib/: api.ts
specs/: architecture_design.md  azure_deployment_plan.md  development_guide.md  document_viewer_and_search_fix_plan.md  project_summary.md  search_relevance_issue_analysis.md  technical_requirements.md  website_crawling_integration.md
src/rag_crawl/: __init__.py  config.py  main.py
src/rag_crawl/api/: __init__.py  chat.py  crawl.py  documents.py  health.py
src/rag_crawl/database/: __init__.py  connection.py  models.py
src/rag_crawl/services/: __init__.py  crawl_service.py  document_service.py  llama_service.py
src/rag_crawl/utils/: __init__.py  file_utils.py  text_processing.py
terraform/: README.md  main.tf  outputs.tf  provider.tf  terraform.tfvars.example  variables.tf
(+6 files in other folders)
